--- a/README.org
+++ b/README.org
@@ -23,97 +23,106 @@
    You can get the latest version from:
    + https://github.com/yoshinari-nomura/enumdate
 
-** Examples
-   YearlyByMonthday:
-   #+begin_src ruby
-     # May 5 -- Children's Day (こどもの日 in Japanese)
-     Enumdate::DateEnumerator::YearlyByMonthday
-       .new(first_date: Date.new(1948), month: 5, mday: 5)
-       .lazy.map(&:to_s).take(3).force
-     # => ["1948-05-05", "1949-05-05", "1950-05-05"]
+** How to use
+*** Create enumerables
+    Thease a simple example to create enumerables:
+    #+begin_src ruby
+      #      June 2021
+      # Su Mo Tu We Th Fr Sa
+      #        1  2  3  4  5
+      #  6  7  8  9 10 11 12
+      # 13 14 15 16 17 18 19
+      # 20 21 22 23 24 25 26
+      # 27 28 29 30
+      #
+      start = Date.new(2021, 6, 1) # first Tuesday June
 
-     # Use `forward_to` and `until` to make it finit.
-     Enumdate::DateEnumerator::YearlyByMonthday
-       .new(first_date: Date.new(1948), month: 5, mday: 5)
-       .forward_to(Date.new(2021)) # forward to a specific date
-       .until(Date.new(2023, 12, 31)) # make finit enumerator
-       .map(&:to_s)
-     # => ["2021-05-05", "2022-05-05", "2023-05-05"]
+      # June 1st every year:
+      Enumdate.yearly_by_monthday(start).lazy.map(&:to_s).take(3).force
+      # => ["2021-06-01", "2022-06-01", "2023-06-01"]
 
-     # Note that the meaning of `forward_to` is different from that of the
-     # `first_date` parameter.  For example, if it has two-years `interval`:
-     Enumdate::DateEnumerator::YearlyByMonthday
-       .new(first_date: Date.new(1948), month: 5, mday: 5, interval: 2)
-       .lazy.map(&:to_s).take(3).force
-     # => ["1948-05-05", "1950-05-05", "1952-05-05"]
+      # First Tuesday June every year:
+      Enumdate.yearly_by_day(start).lazy.map(&:to_s).take(3).force
+      # => ["2021-06-01", "2022-06-07", "2023-06-06"]
 
-     # `forward_to` and `until` clip concrete occurrences without changing
-     # recurring pattern.
-     Enumdate::DateEnumerator::YearlyByMonthday
-       .new(first_date: Date.new(1948), month: 5, mday: 5, interval: 2)
-       .forward_to(Date.new(2021))
-       .lazy.map(&:to_s).take(3).force
-     # => ["2022-05-05", "2024-05-05", "2026-05-05"]
+      # 1st monthday every month:
+      Enumdate.monthly_by_monthday(start).lazy.map(&:to_s).take(3).force
+      # => ["2021-06-01", "2021-07-01", "2021-08-01"]
 
-     # If you change first_date:, it will create different pattern:
-     Enumdate::DateEnumerator::YearlyByMonthday
-       .new(first_date: Date.new(2021), month: 5, mday: 5, interval: 2)
-       .lazy.map(&:to_s).take(3).force
-     # => ["2021-05-05", "2023-05-05", "2025-05-05"]
-   #+end_src
+      # First Tuesday every month:
+      Enumdate.monthly_by_day(start).lazy.map(&:to_s).take(3).force
+      # => ["2021-06-01", "2021-07-06", "2021-08-03"]
 
-   YearlyByDay:
-   #+begin_src ruby
-     # 2nd Mon Oct -- Sports Day (体育の日 in Japanese)
-     monday = 1
-     enum = Enumdate::DateEnumerator::YearlyByDay
-              .new(first_date: Date.new(2000), month: 10, nth: 2, wday: monday)
+      # every Tuesday:
+      Enumdate.weekly(start).lazy.map(&:to_s).take(3).force
+      # => ["2021-06-01", "2021-06-08", "2021-06-15"]
 
-     enum
-       .forward_to(Date.new(2017))
-       .until(Date.new(2019, 12, 31))
-       .lazy.map(&:to_s).force
-     # => ["2017-10-09", "2018-10-08", "2019-10-14"]
-   #+end_src
+      # Everyday:
+      Enumdate.daily(start).lazy.map(&:to_s).take(3).force
+      # => ["2021-06-01", "2021-06-02", "2021-06-03"]
+    #+end_src
 
-   MonthlyByDay, MonthlyByMonthday, Weekly, Daily:
-   #+begin_src ruby
-     fd = Date.new(2021, 8, 12) # = 2nd Thursday August
+    These constructor methods can take more complex parameters
+    such as ~month:~, ~mday:~, ~wday:~, ~nth:~, ~wkst:~.
+    See the gem document for details.
 
-     Enumdate::DateEnumerator::MonthlyByDay
-       .new(first_date: fd, nth: 2, wday: 4)
-       .lazy.map(&:to_s).take(3).force
-     # => ["2021-08-12", "2021-09-09", "2021-10-14"]
+*** Make finit durations
+    This code makes infinit loop (every two years forever):
+    #+begin_src ruby
+      start = Date.new(2021, 6, 1)
+      Enumdate.yearly_by_monthday(start, interval: 2).each do |date|
+        puts date
+      end
+    #+end_src
+    Results:
+    : 2021-06-01
+    : 2023-06-01
+    : 2025-06-01
+    : :
 
-     Enumdate::DateEnumerator::MonthlyByMonthday
-       .new(first_date: fd, mday: 12)
-       .lazy.map(&:to_s).take(3).force
-     # => ["2021-08-12", "2021-09-12", "2021-10-12"]
+    To clip the duration, you can use ~forward_to~ and ~until~:
+    #+begin_src ruby
+      start = Date.new(2021, 6, 1)
+      Enumdate.yearly_by_monthday(start, interval: 2)
+        .forward_to(Date.new(2022, 1, 1))
+        .until(Date.new(2025, 12, 31))
+        .each do |date|
+        puts date
+      end
+    #+end_src
+    Rssults:
+    : 2023-06-01
+    : 2025-06-01
 
-     # week-start: wkst = 0 (Sunday)
-     Enumdate::DateEnumerator::Weekly
-       .new(first_date: fd, wday: 4, interval: 2, wkst: 0)
-       .lazy.map(&:to_s).take(3).force
-     # => ["2021-08-12", "2021-08-26", "2021-09-09"]
+    Note that the meaning of ~forward_to~ is different from that of
+    changing the ~start~ parameter.
+    #+begin_src ruby
+      start = Date.new(2022, 1, 1) # changed as if set forward_to
+      Enumdate.yearly_by_monthday(start, interval: 2)
+        .until(Date.new(2025, 12, 31))
+        .each do |date|
+        puts date
+      end
+    #+end_src
+    Rssults:
+    : 2022-01-01
+    : 2024-01-01
 
-     Enumdate::DateEnumerator::Daily
-       .new(first_date: fd, interval: 3)
-       .lazy.map(&:to_s).take(3).force
-     # => ["2021-08-12", "2021-08-15", "2021-08-18"]
-   #+end_src
+    ~forward_to~ and ~until~ clip concrete occurrences without changing
+    the recurring pattern.
 
-   Merge two recurrences:
-   #+begin_src ruby
-     mon = Date.new(2021, 8, 2) # = 1st Monday
-     wed = Date.new(2021, 8, 4) # = 1st Wednesday
+*** Merge multiple enumerables
+    Sometimes, you may need to compose more complex recurring patterns.
+    In this case, you can merge multiple enumerables:
+    #+begin_src ruby
+      mon = Date.new(2021, 8, 2) # = 1st Monday
+      wed = Date.new(2021, 8, 4) # = 1st Wednesday
 
-     # Every Monday and Wednesday:
-     (Enumdate::EnumMerger.new <<
-      Enumdate::DateEnumerator::Weekly.new(first_date: mon, wday: 1, wkst: 0) <<
-      Enumdate::DateEnumerator::Weekly.new(first_date: wed, wday: 3, wkst: 0))
-     .lazy.map(&:to_s).take(4).force
-     # => ["2021-08-02", "2021-08-04", "2021-08-09", "2021-08-11"]
-   #+end_src
+      # Every Monday and Wednesday:
+      (Enumdate::EnumMerger.new << Enumdate.weekly(mon) << Enumdate.weekly(wed))
+        .lazy.map(&:to_s).take(4).force
+      # => ["2021-08-02", "2021-08-04", "2021-08-09", "2021-08-11"]
+    #+end_src
 
 ** Installation
    Add this line to your application's Gemfile:
